// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles JavaScript 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript 2`] = `
"function _classCallCheck(e,n){if(!(e instanceof n))throw new TypeError(\\"Cannot call a class as a function\\")}function _defineProperties(e,n){for(var t=0;t<n.length;t++){var a=n[t];a.enumerable=a.enumerable||!1,a.configurable=!0,\\"value\\"in a&&(a.writable=!0),Object.defineProperty(e,a.key,a)}}function _createClass(e,n,t){return n&&_defineProperties(e.prototype,n),t&&_defineProperties(e,t),e}import\\"./otherfile\\";var Test=/*#__PURE__*/function(){function e(n){_classCallCheck(this,e),this.name=n}return _createClass(e,[{key:\\"sayHi\\",value:function(){console.log(\\"Hello \\".concat(this.name,\\" !\\"))}}]),e}();var test=new Test(\\"Stéphane\\");test.sayHi();
//# sourceMappingURL=script.js.map
"
`;

exports[`Compiles JavaScript 3`] = `
"setTimeout((function(){console.log(\\"Welcome to this website\\")}),1e3);
//# sourceMappingURL=otherfile.js.map
"
`;

exports[`Compiles JavaScript and concatenates 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/concatenates/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript and concatenates 2`] = `
"function _classCallCheck(e,t){if(!(e instanceof t))throw new TypeError(\\"Cannot call a class as a function\\")}function _defineProperties(e,t){for(var n=0;n<t.length;n++){var a=t[n];a.enumerable=a.enumerable||!1,a.configurable=!0,\\"value\\"in a&&(a.writable=!0),Object.defineProperty(e,a.key,a)}}function _createClass(e,t,n){return t&&_defineProperties(e.prototype,t),n&&_defineProperties(e,n),e}setTimeout((function(){console.log(\\"Welcome to this website\\")}),1e3);var Test=/*#__PURE__*/function(){function e(t){_classCallCheck(this,e),this.name=t}return _createClass(e,[{key:\\"sayHi\\",value:function(){console.log(\\"Hello \\".concat(this.name,\\" !\\"))}}]),e}();var test=new Test(\\"Stéphane\\");test.sayHi();
//# sourceMappingURL=myBundle.min.js.map
"
`;

exports[`Compiles JavaScript with custom babel plugin 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/compiles-babel-plugin/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript with custom babel plugin 2`] = `
"var foo = {
  \\"catch\\": function _catch() {}
}; //eslint-disable-next-line no-console

console.log(foo.catch);
//# sourceMappingURL=script.js.map
"
`;

exports[`Compiles JavaScript, keeps runtime external 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/compiles-import-runtime/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript, keeps runtime external 2`] = `
"import _asyncToGenerator from \\"@babel/runtime/helpers/asyncToGenerator\\";
import _classCallCheck from \\"@babel/runtime/helpers/classCallCheck\\";
import _createClass from \\"@babel/runtime/helpers/createClass\\";
import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";

/* global test */
import \\"./otherfile\\";

var Test = /*#__PURE__*/function () {
  function Test(name) {
    _classCallCheck(this, Test);

    this.name = name;
  }

  _createClass(Test, [{
    key: \\"sayHi\\",
    value: function () {
      var _sayHi = _asyncToGenerator( /*#__PURE__*/_regeneratorRuntime.mark(function _callee() {
        return _regeneratorRuntime.wrap(function _callee$(_context) {
          while (1) {
            switch (_context.prev = _context.next) {
              case 0:
                //eslint-disable-next-line no-console
                console.log(\\"Hello \\".concat(this.name, \\" !\\"));
                _context.next = 3;
                return Promise.resolve();

              case 3:
              case \\"end\\":
                return _context.stop();
            }
          }
        }, _callee, this);
      }));

      function sayHi() {
        return _sayHi.apply(this, arguments);
      }

      return sayHi;
    }()
  }]);

  return Test;
}();

var test = new Test(\\"Stéphane\\");
test.sayHi();
//# sourceMappingURL=script.js.map
"
`;

exports[`Compiles JavaScript, keeps runtime external 3`] = `
"setTimeout(function () {
  //eslint-disable-next-line no-console
  console.log(\\"Welcome to this website\\");
}, 1000);
//# sourceMappingURL=otherfile.js.map
"
`;

exports[`Compiles JavaScript, new features transpiled 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/compiles-new-features/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript, new features transpiled 2`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";

function asyncGeneratorStep(gen, resolve, reject, _next, _throw, key, arg) { try { var info = gen[key](arg); var value = info.value; } catch (error) { reject(error); return; } if (info.done) { resolve(value); } else { Promise.resolve(value).then(_next, _throw); } }

function _asyncToGenerator(fn) { return function () { var self = this, args = arguments; return new Promise(function (resolve, reject) { var gen = fn.apply(self, args); function _next(value) { asyncGeneratorStep(gen, resolve, reject, _next, _throw, \\"next\\", value); } function _throw(err) { asyncGeneratorStep(gen, resolve, reject, _next, _throw, \\"throw\\", err); } _next(undefined); }); }; }

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); return Constructor; }

/* global test */
import \\"./otherfile\\";

var Test = /*#__PURE__*/function () {
  function Test(name) {
    _classCallCheck(this, Test);

    this.name = name;
  }

  _createClass(Test, [{
    key: \\"sayHi\\",
    value: function () {
      var _sayHi = _asyncToGenerator( /*#__PURE__*/_regeneratorRuntime.mark(function _callee() {
        return _regeneratorRuntime.wrap(function _callee$(_context) {
          while (1) {
            switch (_context.prev = _context.next) {
              case 0:
                //eslint-disable-next-line no-console
                console.log(\\"Hello \\".concat(this.name, \\" !\\"));
                _context.next = 3;
                return Promise.resolve();

              case 3:
              case \\"end\\":
                return _context.stop();
            }
          }
        }, _callee, this);
      }));

      function sayHi() {
        return _sayHi.apply(this, arguments);
      }

      return sayHi;
    }()
  }]);

  return Test;
}();

var test = new Test(\\"Stéphane\\");
test.sayHi();
//# sourceMappingURL=script.js.map
"
`;

exports[`Compiles JavaScript, new features transpiled 3`] = `
"setTimeout(function () {
  //eslint-disable-next-line no-console
  console.log(\\"Welcome to this website\\");
}, 1000);
//# sourceMappingURL=otherfile.js.map
"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] SyntaxError in plugin \\"gulp-babel\\"
Message:
    __PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/fails/js/script.js: Unexpected token (14:6)

  12 | }
  13 |
> 14 | const test = new Test(\\"Stéphane\\");
     |       ^
  15 | test.sayHi();
  16 |
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
[__:__:__]
__PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/fails/js/script.js
  14:6  error  Parsing error: Unexpected token (14:6)

✖ 1 problem (1 error, 0 warnings)

",
}
`;

exports[`Lints JavaScript 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/lints-es5/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__]
__PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/lints-es5/js/script.js
  3:14  error  Replace \`·(one,\` with \`(one,·\`       @swissquote/swissquote/prettier/prettier
  4:1   error  Delete \`·\`                           @swissquote/swissquote/prettier/prettier
  7:23  error  Replace \`⏎\` with \`·\`                 @swissquote/swissquote/prettier/prettier
  9:12  error  Expected '===' and instead saw '=='  eqeqeq

✖ 4 problems (4 errors, 0 warnings)
  3 errors and 0 warnings potentially fixable with the \`--fix\` option.

[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] ESLint failed with 4 errors
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
}
`;

exports[`Lints JavaScript, doesn't fail in development 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/lints-es5-dev/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
[__:__:__]
__PATH__/packages/integration/fixtures/crafty-preset-babel-gulp/lints-es5-dev/js/script.js
  3:14  warning  Replace \`·(one,\` with \`(one,·\`  @swissquote/swissquote/prettier/prettier
  4:1   warning  Delete \`·\`                      @swissquote/swissquote/prettier/prettier
  7:23  warning  Replace \`⏎\` with \`·\`            @swissquote/swissquote/prettier/prettier

✖ 3 problems (0 errors, 3 warnings)
  0 errors and 3 warnings potentially fixable with the \`--fix\` option.

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
